Issue #68: temporarily excluding gift-linux and real-time scripts from CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,6 +68,8 @@ gift-linux:
     - make install
   tags:
     - gift-linux
+  only:
+    - master
 
 pypi-packaging:
   script:
@@ -116,4 +118,3 @@ real-time:
     - 76-tests-not-working-without-opencv
     - 78-add-ctest-to-ci-scripts
     - 77-use_libvlc-still-appearing-in-cmake
-    - 68-publish-giftgrab-on-pypi
