Issue #68: including api folder in PyPI installer as well now

--- a/src/MANIFEST.in
+++ b/src/MANIFEST.in
@@ -1,4 +1,5 @@
 include build_config.py
+recursive-include api *
 recursive-include cmake *
 recursive-include epiphansdk *
 recursive-include ffmpeg *
