--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,8 +66,6 @@ gift-linux:
     - make install
   tags:
     - gift-linux
-  only:
-    - master
 
 pypi-packaging:
   script:
@@ -132,3 +130,4 @@ real-time:
     - 76-tests-not-working-without-opencv
     - 78-add-ctest-to-ci-scripts
     - 77-use_libvlc-still-appearing-in-cmake
+    - 68-publish-giftgrab-on-pypi
