--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,15 @@
 PROJECT(GiftGrab)
 CMAKE_MINIMUM_REQUIRED(VERSION 3.2.0)
 
+# Will be used when installing
+SET(GiftGrab_PATH_SUFFIX giftgrab)
+
+# RPATH stuff - to avoid losing linking information
+SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
+SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
+SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib/${GiftGrab_PATH_SUFFIX}")
+SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+
 # Build types and default build type
 SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release")
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
@@ -166,20 +175,20 @@ if(BUILD_PYTHON)
     LIST(APPEND INSTALLABLES ${NAME_PYTHON})
 endif(BUILD_PYTHON)
 
+
 # Install
-SET(GiftGrab_PATH_SUFFIX giftgrab)
 INSTALL(
     FILES ${HEADERS}
     DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${GiftGrab_PATH_SUFFIX}
 )
 INSTALL(
     FILES ${CMAKE_CURRENT_SOURCE_DIR}/python/modules/epiphan.py
-    cmake/GiftGrabConfig.cmake
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${GiftGrab_PATH_SUFFIX}
+          ${CMAKE_CURRENT_SOURCE_DIR}/cmake/GiftGrabConfig.cmake
+    DESTINATION ${CMAKE_INSTALL_RPATH}
 )
 INSTALL(
     TARGETS ${INSTALLABLES}
     RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/${GiftGrab_PATH_SUFFIX}
-    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${GiftGrab_PATH_SUFFIX}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_RPATH}
     ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${GiftGrab_PATH_SUFFIX}
 )
