Issue #68: added dedicated CMake files for PythonLibs and Boost.Python

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -162,9 +162,9 @@ endif(BUILD_TESTS)
 
 # Python wrappers
 if(BUILD_PYTHON)
-    FIND_PACKAGE(PythonLibs 2.7 REQUIRED)
+    ADD_SUBDIRECTORY(cmake/pythonlibs)
     INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
-    FIND_PACKAGE(Boost COMPONENTS python REQUIRED)
+    ADD_SUBDIRECTORY(cmake/boost.python)
     INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
 
     SET(NAME_PYTHON py${NAME})
