--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,9 +70,12 @@ gift-linux:
 pypi-packaging:
   script:
     - GiftGrab_PyPI_BUILD_DIR="$SCRATCH_DIR/build/GiftGrab_PyPI"
+    - GiftGrab_PyPI_INSTALL_DIR="$GiftGrab_PyPI_BUILD_DIR/install"
     - GiftGrab_venv=venv
     - rm -rf "$GiftGrab_PyPI_BUILD_DIR"
     - mkdir "$GiftGrab_PyPI_BUILD_DIR"
+    - rm -rf "$GiftGrab_PyPI_INSTALL_DIR"
+    - mkdir "$GiftGrab_PyPI_INSTALL_DIR"
     - cd "$GiftGrab_PyPI_BUILD_DIR"
     - export GiftGrab_PyPI_DIST_DIR=dist
     - rm -rfv "$GiftGrab_PyPI_DIST_DIR"
@@ -82,16 +85,12 @@ pypi-packaging:
     - cd "$GiftGrab_PyPI_BUILD_DIR"
     - virtualenv $GiftGrab_venv
     - cd $GiftGrab_venv
-    - python -c "from site import getsitepackages"  # no output = success!
     - source bin/activate
-    - pwd
-    - python -c "from site import getsitepackages"  # should err!
-    - deactivate
-    # - ls -alh ./*
-    # - PyPI_INSTALLER="$GiftGrab_PyPI_DIST_DIR/$(ls $GiftGrab_PyPI_DIST_DIR | grep tar.gz)"
-    # - if [ -z "$PyPI_INSTALLER" ]; then exit 1; fi
-    # # Python and tests (currently all python)
-    # - pip install -vvv --upgrade "$PyPI_INSTALLER"
+    - ls -alh ./*
+    - PyPI_INSTALLER="$GiftGrab_PyPI_DIST_DIR/$(ls $GiftGrab_PyPI_DIST_DIR | grep tar.gz)"
+    - if [ -z "$PyPI_INSTALLER" ]; then exit 1; fi
+    # Python and tests (currently all python)
+    - pip install -vvv --install-option="--cmake-install-prefix=$GiftGrab_PyPI_INSTALL_DIR" --upgrade "$PyPI_INSTALLER"
     # # H265 support
     # - pip install -vvv --install-option="--h265" --upgrade "$PyPI_INSTALLER"
     # # hardware-accelerated H265
@@ -102,6 +101,7 @@ pypi-packaging:
     # - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
     # # Epiphan DVI2PCIe Duo support (EpiphanSDK)
     # - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--epiphan-dvi2pcie-duo" --install-option="--i420" --upgrade "$PyPI_INSTALLER"
+    - deactivate
   tags:
     - gift-linux
     - gift-pypi
