--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,7 +87,7 @@ pypi-packaging:
     - cd $GiftGrab_venv
     - source bin/activate
     - ls -alh ./*
-    - PyPI_INSTALLER="$GiftGrab_PyPI_DIST_DIR/$(ls $GiftGrab_PyPI_DIST_DIR | grep tar.gz)"
+    - PyPI_INSTALLER="../$GiftGrab_PyPI_DIST_DIR/$(ls $GiftGrab_PyPI_DIST_DIR | grep tar.gz)"
     - if [ -z "$PyPI_INSTALLER" ]; then exit 1; fi
     # Python and tests (currently all python)
     - pip install -vvv --install-option="--cmake-install-prefix=$GiftGrab_PyPI_INSTALL_DIR" --upgrade "$PyPI_INSTALLER"
