--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,17 +90,17 @@ pypi-packaging:
     - PyPI_INSTALLER="../$GiftGrab_PyPI_DIST_DIR/$(ls ../$GiftGrab_PyPI_DIST_DIR | grep tar.gz)"
     - if [ -z "$PyPI_INSTALLER" ]; then exit 1; fi
     # Python and tests (currently all python)
-    - pip install -vvv --install-option="--cmake-install-prefix=$GiftGrab_PyPI_INSTALL_DIR" --upgrade "$PyPI_INSTALLER"
+    - pip install -vvv --upgrade "$PyPI_INSTALLER"
     # H265 support
-    - pip install -vvv --install-option="--h265" --install-option="--cmake-install-prefix=$GiftGrab_PyPI_INSTALL_DIR" --upgrade "$PyPI_INSTALLER"
+    - pip install -vvv --install-option="--h265" --upgrade "$PyPI_INSTALLER"
     # hardware-accelerated H265
-    - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--cmake-install-prefix=$GiftGrab_PyPI_INSTALL_DIR" --upgrade "$PyPI_INSTALLER"
+    - pip install -vvv --install-option="--h265" --install-option="--nvenc" --upgrade "$PyPI_INSTALLER"
     # Xvid support (OpenCV should get switched here)
-    - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--cmake-install-prefix=$GiftGrab_PyPI_INSTALL_DIR" --upgrade "$PyPI_INSTALLER"
+    - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --upgrade "$PyPI_INSTALLER"
     # Epiphan DVI2PCIe Duo support (OpenCV)
-    - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--epiphan-dvi2pcie-duo" --install-option="--cmake-install-prefix=$GiftGrab_PyPI_INSTALL_DIR" --upgrade "$PyPI_INSTALLER"
+    - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
     # Epiphan DVI2PCIe Duo support (EpiphanSDK)
-    - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--epiphan-dvi2pcie-duo" --install-option="--i420" --install-option="--cmake-install-prefix=$GiftGrab_PyPI_INSTALL_DIR" --upgrade "$PyPI_INSTALLER"
+    - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--epiphan-dvi2pcie-duo" --install-option="--i420" --upgrade "$PyPI_INSTALLER"
     - deactivate
   tags:
     - gift-linux
