Issue #68, #51, #52: new structure for installing the epiphan module, details below: - example_epiphan script now console script within __init__.py - CMake not installing epiphan module any more

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -182,8 +182,7 @@ INSTALL(
     DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${GiftGrab_PATH_SUFFIX}
 )
 INSTALL(
-    FILES ${CMAKE_CURRENT_SOURCE_DIR}/python/modules/epiphan.py
-          ${CMAKE_CURRENT_SOURCE_DIR}/cmake/GiftGrabConfig.cmake
+    FILES ${CMAKE_CURRENT_SOURCE_DIR}/cmake/GiftGrabConfig.cmake
     DESTINATION ${CMAKE_INSTALL_RPATH}
 )
 INSTALL(
