Issue #68: added separate pytest installation step to CI script for PyPI installations on Storz stack (due to issue of not recognising install options)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -131,6 +131,8 @@ pypi-packaging-epiphan:
     - ls -alh ./*
     - PyPI_INSTALLER="../$GiftGrab_PyPI_DIST_DIR/$(ls ../$GiftGrab_PyPI_DIST_DIR | grep tar.gz)"
     - if [ -z "$PyPI_INSTALLER" ]; then exit 1; fi
+    # because pip seems to be getting confused about install options on Storz stack:
+    - pip install pytest
     # Epiphan DVI2PCIe Duo support (OpenCV)
     - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
     - test-giftgrab-h265
