--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,13 +93,13 @@ pypi-packaging:
     - pip install -vvv --upgrade "$PyPI_INSTALLER"
     # H265 support
     - pip install -vvv --install-option="--h265" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-h265
+    - test-giftgrab-h265; exit_on_fail
     # hardware-accelerated H265
     - pip install -vvv --install-option="--h265" --install-option="--nvenc" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-h265
+    - test-giftgrab-h265; exit_on_fail
     # Xvid support (OpenCV should get switched here)
     - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-xvid
+    - test-giftgrab-xvid; exit_on_fail
     # Epiphan DVI2PCIe Duo support (OpenCV)
     - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
     # Epiphan DVI2PCIe Duo support (EpiphanSDK)
@@ -136,14 +136,14 @@ pypi-packaging-epiphan:
     - pip install pytest
     # Epiphan DVI2PCIe Duo support (OpenCV)
     - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-h265
-    - test-giftgrab-xvid
-    - test-giftgrab-epiphan-dvi2pcieduo-bgr24
+    - test-giftgrab-h265; exit_on_fail
+    - test-giftgrab-xvid; exit_on_fail
+    - test-giftgrab-epiphan-dvi2pcieduo-bgr24; exit_on_fail
     # Epiphan DVI2PCIe Duo support (EpiphanSDK)
     - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--epiphan-dvi2pcie-duo" --install-option="--i420" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-h265
-    - test-giftgrab-xvid
-    - test-giftgrab-epiphan-dvi2pcieduo-i420
+    - test-giftgrab-h265; exit_on_fail
+    - test-giftgrab-xvid; exit_on_fail
+    - test-giftgrab-epiphan-dvi2pcieduo-i420; exit_on_fail
     - deactivate
   tags:
     - gift-pypi
