Issue #83: defining USE_LIBVLC C++ macro in CMake file if VLC is to be used

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -147,6 +147,7 @@ endif(USE_I420)
 if(USE_LIBVLC)
     ADD_SUBDIRECTORY(cmake/libvlc)
     LIST(APPEND LIBS ${LIBVLC_LIBRARY})
+    ADD_DEFINITIONS(-DUSE_LIBVLC)
 
     INCLUDE_DIRECTORIES(vlc)
     LIST(APPEND HEADERS vlc/vlc_video_source.h)
