--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -212,3 +212,4 @@ real-time:
     - 77-use_libvlc-still-appearing-in-cmake
     - 68-publish-giftgrab-on-pypi
     - 84-switch-to-bsd-compatible-x265-alternative
+    - 83-revive-libvlc-video-source
