--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,11 @@ gift-linux:
     - make -j; exit_on_fail
     - ctest; exit_on_fail
     - make install
+    # H265 support with x265
+    - cmake -D USE_H265=ON -D ENABLE_GPL=ON -D USE_X265=ON .
+    - make -j; exit_on_fail
+    - ctest; exit_on_fail
+    - make install
     # hardware-accelerated H265
     - cmake -D USE_NVENC=ON .
     - make -j; exit_on_fail
@@ -94,6 +99,9 @@ pypi-packaging:
     - pip install -vvv --upgrade "$PyPI_INSTALLER"
     # H265 support
     - pip install -vvv --install-option="--h265" --upgrade "$PyPI_INSTALLER"
+    - test-giftgrab-h265; exit_on_fail
+    # H265 support with x265
+    - pip install -vvv --install-option="--h265" --install-option="--enable-gpl" --install-option="--x265" --upgrade "$PyPI_INSTALLER"
     - test-giftgrab-h265; exit_on_fail
     # hardware-accelerated H265
     - pip install -vvv --install-option="--h265" --install-option="--nvenc" --upgrade "$PyPI_INSTALLER"
