--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,19 +27,19 @@ gift-linux:
     - make -j; exit_on_fail
     # no ctest: no features activated to be tested yet
     - make install
-    # H265 support
-    - cmake -D USE_H265=ON .
+    # HEVC support
+    - cmake -D USE_HEVC=ON .
     - make -j; exit_on_fail
     - ctest; exit_on_fail
     - make install
-    # H265 support with x265
+    # HEVC support with x265
     - cmake -D ENABLE_GPL=ON -D USE_X265=ON .
     - make -j; exit_on_fail
     - ctest; exit_on_fail
     - make install
     # turn x265 off explicitly for combination testing
     - cmake -D ENABLE_GPL=OFF -D USE_X265=OFF .
-    # hardware-accelerated H265
+    # hardware-accelerated HEVC
     - cmake -D USE_NVENC=ON .
     - make -j; exit_on_fail
     - ctest; exit_on_fail
@@ -99,25 +99,25 @@ pypi-packaging:
     - if [ -z "$PyPI_INSTALLER" ]; then exit 1; fi
     # Python and tests (currently all python)
     - pip install -vvv --upgrade "$PyPI_INSTALLER"
-    # H265 support
-    - pip install -vvv --install-option="--h265" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-h265; exit_on_fail
-    # H265 support with x265
-    - pip install -vvv --install-option="--h265" --install-option="--enable-gpl" --install-option="--x265" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-h265; exit_on_fail
-    # hardware-accelerated H265
-    - pip install -vvv --install-option="--h265" --install-option="--nvenc" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-h265; exit_on_fail
+    # HEVC support
+    - pip install -vvv --install-option="--hevc" --upgrade "$PyPI_INSTALLER"
+    - test-giftgrab-hevc; exit_on_fail
+    # HEVC support with x265
+    - pip install -vvv --install-option="--hevc" --install-option="--enable-gpl" --install-option="--x265" --upgrade "$PyPI_INSTALLER"
+    - test-giftgrab-hevc; exit_on_fail
+    # hardware-accelerated HEVC
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --upgrade "$PyPI_INSTALLER"
+    - test-giftgrab-hevc; exit_on_fail
     # Xvid support (OpenCV should get switched here)
-    - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --upgrade "$PyPI_INSTALLER"
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --upgrade "$PyPI_INSTALLER"
     - test-giftgrab-xvid; exit_on_fail
     # VP9 support
-    - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --upgrade "$PyPI_INSTALLER"
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --upgrade "$PyPI_INSTALLER"
     - test-giftgrab-vp9; exit_on_fail
     # Epiphan DVI2PCIe Duo support (OpenCV)
-    - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
     # Epiphan DVI2PCIe Duo support (EpiphanSDK)
-    - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--i420" --upgrade "$PyPI_INSTALLER"
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--i420" --upgrade "$PyPI_INSTALLER"
     - deactivate
   tags:
     - gift-linux
@@ -149,14 +149,14 @@ pypi-packaging-epiphan:
     - pip install PyYAML
     - pip install pytest
     # Epiphan DVI2PCIe Duo support (OpenCV)
-    - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-h265; exit_on_fail
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --upgrade "$PyPI_INSTALLER"
+    - test-giftgrab-hevc; exit_on_fail
     - test-giftgrab-xvid; exit_on_fail
     - test-giftgrab-vp9; exit_on_fail
     - test-giftgrab-epiphan-dvi2pcieduo-bgr24; exit_on_fail
     # Epiphan DVI2PCIe Duo support (EpiphanSDK)
-    - pip install -vvv --install-option="--h265" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--i420" --upgrade "$PyPI_INSTALLER"
-    - test-giftgrab-h265; exit_on_fail
+    - pip install -vvv --install-option="--hevc" --install-option="--nvenc" --install-option="--xvid" --install-option="--vp9" --install-option="--epiphan-dvi2pcie-duo" --install-option="--i420" --upgrade "$PyPI_INSTALLER"
+    - test-giftgrab-hevc; exit_on_fail
     - test-giftgrab-xvid; exit_on_fail
     - test-giftgrab-vp9; exit_on_fail
     - test-giftgrab-epiphan-dvi2pcieduo-i420; exit_on_fail
@@ -168,7 +168,7 @@ pypi-packaging-epiphan:
 # Real-time recording ####
 real-time:
   script:
-    - cmake -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D BUILD_PYTHON=ON -D BUILD_TESTS=ON -D USE_H265=ON -D USE_NVENC=ON -D USE_VP9=ON "$GiftGrab_SOURCE_DIR"
+    - cmake -D USE_EPIPHAN_DVI2PCIE_DUO=ON -D BUILD_PYTHON=ON -D BUILD_TESTS=ON -D USE_HEVC=ON -D USE_NVENC=ON -D USE_VP9=ON "$GiftGrab_SOURCE_DIR"
     - make -j; exit_on_fail
     # test BGR24 colour space
     - check_epiphan_alive
