Issue #84: all H265-ish options renamed to HEVC: relevant CMake files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,10 +23,10 @@ ADD_SUBDIRECTORY(cmake/cpp11)
 # Configurable options, depending on desired functionality
 OPTION(USE_EPIPHAN_DVI2PCIE_DUO
     "Capture video with Epiphan DVI2PCIe Duo" OFF)
-OPTION(USE_H265
-    "Video encoding with H.265 (requires FFmpeg, pkg-config and kvazaar [default] or x265 [turn USE_X265 on])" OFF)
+OPTION(USE_HEVC
+    "Video encoding with HEVC (requires FFmpeg, pkg-config and kvazaar [default] or x265 [turn USE_X265 on])" OFF)
 OPTION(USE_X265
-    "Use x265 instead of kvazaar for H.265 video encoding (requires ENABLE_GPL as well)" OFF)
+    "Use x265 instead of kvazaar for HEVC video encoding (requires ENABLE_GPL as well)" OFF)
 OPTION(ENABLE_GPL
     "Enable GPL libraries" OFF)
 OPTION(USE_XVID
@@ -34,7 +34,7 @@ OPTION(USE_XVID
 OPTION(USE_VP9
     "Video encoding with VP9 (requires FFmpeg, pkg-config and libvpx)" OFF)
 OPTION(USE_NVENC
-    "Hardware-accelerated video encoding with H.265 (requires FFmpeg, pkg-config and NVENC)" OFF)
+    "Hardware-accelerated video encoding with HEVC (requires FFmpeg, pkg-config and NVENC)" OFF)
 OPTION(BUILD_DOC
     "Source code documentation (requires Doxygen)" OFF)
 OPTION(BUILD_TESTS
@@ -59,7 +59,7 @@ MARK_AS_ADVANCED(USE_OPENCV)
 # Check GPL explicitly enabled for relevant components
 if(USE_X265 AND NOT ENABLE_GPL)
     MESSAGE(FATAL_ERROR
-        "x265 is a GPL library: you must explicitly enable GPL (ENABLE_GPL=ON) to build GIFT-Grab with x256 support")
+        "x265 is a GPL library: you must explicitly enable GPL (ENABLE_GPL=ON) to build GIFT-Grab with x265 support")
 endif(USE_X265 AND NOT ENABLE_GPL)
 
 # Determine whether OpenCV needed
@@ -69,7 +69,7 @@ if((USE_EPIPHAN_DVI2PCIE_DUO AND NOT USE_I420) OR
 endif()
 
 # Determine whether FFmpeg needed
-if(USE_H265 OR USE_NVENC OR USE_VP9)
+if(USE_HEVC OR USE_VP9)
     SET(USE_FFMPEG ON CACHE BOOL "OFF ON" FORCE)
 endif()
 
