Issue #89: CMake turns EpiphanSDK on only if using an Epiphan device with I420 colour space

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -68,6 +68,10 @@ if((USE_EPIPHAN_DVI2PCIE_DUO AND NOT USE_I420) OR
     SET(USE_OPENCV ON CACHE BOOL "OFF ON" FORCE)
 endif()
 
+if(USE_EPIPHAN_DVI2PCIE_DUO AND USE_I420)
+    SET(USE_EPIPHANSDK ON CACHE BOOL "OFF ON" FORCE)
+endif(USE_EPIPHAN_DVI2PCIE_DUO AND USE_I420)
+
 # Determine whether FFmpeg needed
 if(USE_HEVC OR USE_VP9)
     SET(USE_FFMPEG ON CACHE BOOL "OFF ON" FORCE)
@@ -133,7 +137,6 @@ endif(USE_X265)
 
 # Support for I420 (YUV420p) colour space
 if(USE_I420)
-    SET(USE_EPIPHANSDK ON CACHE BOOL "OFF ON" FORCE)
     ADD_DEFINITIONS(-DUSE_I420)
 
     LIST(APPEND HEADERS api/videoframe_i420.h)
@@ -145,6 +148,7 @@ if(USE_EPIPHANSDK)
     ADD_SUBDIRECTORY(cmake/epiphansdk)
     INCLUDE_DIRECTORIES(${EpiphanSDK_INCLUDE_DIRS})
     LIST(APPEND LIBS ${EpiphanSDK_LIBS})
+    ADD_DEFINITIONS(-DUSE_EPIPHANSDK)
 
     INCLUDE_DIRECTORIES(epiphansdk)
     LIST(APPEND HEADERS epiphansdk/epiphansdk_video_source.h)
