Issue #83: USE_LIBVLC macro and CMake option now used correctly, and also related EpiphanSDK macro has precedence in C++

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,6 +55,8 @@ SET(USE_FFMPEG OFF CACHE BOOL "ON OFF" FORCE)
 MARK_AS_ADVANCED(USE_FFMPEG)
 SET(USE_OPENCV OFF CACHE BOOL "ON OFF" FORCE)
 MARK_AS_ADVANCED(USE_OPENCV)
+SET(USE_LIBVLC OFF CACHE BOOL "ON OFF" FORCE)
+MARK_AS_ADVANCED(USE_LIBVLC)
 
 # Check GPL explicitly enabled for relevant components
 if(USE_X265 AND NOT ENABLE_GPL)
