Issue #83, Issue #93: Epiphan unit tests run individually if using libVLC (3.0.0 nightly build)

--- a/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
+++ b/src/tests/epiphan/dvi2pcieduo/CMakeLists.txt
@@ -6,19 +6,36 @@ FILE(COPY
 )
 SET(CONFIG_DIR ${CMAKE_SOURCE_DIR}/tests/epiphan/dvi2pcieduo/data)
 
-# SDI port on its own
-SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_SDI_${COLOUR_SPACE})
-ADD_TEST(NAME ${NAME_TEST}
-    COMMAND py.test --port=SDI --colour-space=${COLOUR_SPACE} test_unit.py
-)
-LIST(APPEND TESTS_LIST ${NAME_TEST})
+# SDI and DVI ports on their own
+LIST(APPEND PORTS SDI)
+LIST(APPEND PORTS DVI)
+foreach(PORT ${PORTS})
+    if(USE_LIBVLC)  # see Issue #93
+        SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_${PORT}_${COLOUR_SPACE}_get_frame)
+        ADD_TEST(NAME ${NAME_TEST}
+            COMMAND py.test --port=${PORT} --colour-space=${COLOUR_SPACE} test_unit.py -k test_get_frame
+        )
+        LIST(APPEND TESTS_LIST ${NAME_TEST})
 
-# DVI port on its own
-SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_DVI_${COLOUR_SPACE})
-ADD_TEST(NAME ${NAME_TEST}
-    COMMAND py.test --port=DVI --colour-space=${COLOUR_SPACE} test_unit.py
-)
-LIST(APPEND TESTS_LIST ${NAME_TEST})
+        SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_${PORT}_${COLOUR_SPACE}_sub_frame)
+        ADD_TEST(NAME ${NAME_TEST}
+            COMMAND py.test --port=${PORT} --colour-space=${COLOUR_SPACE} test_unit.py -k test_sub_frame
+        )
+        LIST(APPEND TESTS_LIST ${NAME_TEST})
+
+        SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_${PORT}_${COLOUR_SPACE}_full_frame)
+        ADD_TEST(NAME ${NAME_TEST}
+            COMMAND py.test --port=${PORT} --colour-space=${COLOUR_SPACE} test_unit.py -k test_full_frame
+        )
+        LIST(APPEND TESTS_LIST ${NAME_TEST})
+    elseif(USE_LIBVLC)
+        SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_${PORT}_${COLOUR_SPACE})
+        ADD_TEST(NAME ${NAME_TEST}
+            COMMAND py.test --port=${PORT} --colour-space=${COLOUR_SPACE} test_unit.py
+        )
+        LIST(APPEND TESTS_LIST ${NAME_TEST})
+    endif(USE_LIBVLC)
+endforeach(PORT)
 
 # Both ports in real-time
 SET(NAME_TEST Test_Epiphan_DVI2PCIeDuo_RealTime_${COLOUR_SPACE})
